fdo#73219 File corruption: Table in header

Description:
File corrupt due to the end tag </w:tc> </w:tr> </w:tbl> are missing after roundtrip in header4.xml

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/8378

Change-Id: Ib05a50b3b3beca6c744b93360f9341ddcaa1a22a