sw/source/filter/ww8/docxattributeoutput.hxx
@@ -113,6 +113,8 @@ struct TableReference
     /// Remember the current table depth.
     sal_uInt32 m_nTableDepth;
 
+    ww8::WW8TableNodeInfoInner::Pointer_t m_pOldTablepInner;
+
     TableReference()
         : m_bTableCellOpen(false),
         m_nTableDepth(0)
